--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "mime": "3",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "onesignal-node": "^3.4.0",
+    "socket.io": "^4.8.0",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
