--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mime": "3",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.15",
     "onesignal-node": "^3.4.0",
     "socket.io": "^4.8.0",
     "typescript": "^5.5.4"
