--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^22.1.0",
     "aws-sdk": "^2.1667.0",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
